--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <nav id="hamnav">
+    <!--   <nav id="hamnav">
       <div class="menuBarra">
         <label for="hamburger"> &#9776; </label>
         <div class="search">
@@ -44,7 +44,7 @@
     <div class="mainContainer">
       <div id="aside"></div>
       <div class="main"><app-characters></app-characters></div>
-    </div>
+    </div> -->
     <app-root></app-root>
   </body>
 </html>
