--- a/src/index.html
+++ b/src/index.html
@@ -1,50 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>ApiMARVEL</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
-  </head>
 
-  <body>
-    <nav id="hamnav">
-      <div class="menuBarra">
-        <label for="hamburger"> &#9776; </label>
-        <div class="search">
-          <form action="#">
-            <input type="text" placeholder=" Search Courses" name="search" />
-            <button>🔍</button>
-          </form>
-        </div>
-      </div>
-      <input type="checkbox" id="hamburger" />
+<head>
+  <meta charset="utf-8" />
+  <title>ApiMARVEL</title>
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+</head>
 
-      <div id="hamitems">
-        <a href="#">a un sitio</a>
-        <a href="#">a otro sitio</a>
-        <a href="#">un lugar distinto</a>
-        <a href="#">¿quien sabe donde?</a>
-      </div>
-    </nav>
-    <div class="mainContainer">
-      <div id="aside"></div>
-      <div class="main"><app-characters></app-characters></div>
-    </div>
-    <app-root></app-root>
-  </body>
+<body>
+
+  <app-root></app-root>
+</body>
+
 </html>
